--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -6,7 +6,7 @@ on:
       - 'v*.*.*'
 
 jobs:
-  build-and-upload:
+  build-and-upload-linux:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,5 +31,33 @@ jobs:
         with:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: ./main
-          asset_name: main
+          asset_name: main-linux
+          asset_content_type: application/octet-stream
+
+  build-and-upload-windows:
+    runs-on: windows-latest
+
+    steps:
+      # Step 1: Checkout the repository
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Step 2: Set up a C++ compiler
+      - name: Set up C++ compiler
+        uses: actions/setup-cpp@v2
+        with:
+          compiler: msvc
+
+      # Step 3: Compile the main.cpp file
+      - name: Build main.cpp
+        run: |
+          cl.exe /EHsc /Fe:main.exe main.cpp
+
+      # Step 4: Upload the compiled binary as an artifact
+      - name: Upload binary to tag
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./main.exe
+          asset_name: main-windows.exe
           asset_content_type: application/octet-stream
