--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -1,9 +1,9 @@
 name: Build and Upload Binary
 
 on:
-  push:
-    tags:
-      - 'v*.*.*'
+  release:
+    types:
+      - created
 
 jobs:
   build-and-upload:
@@ -18,7 +18,12 @@ jobs:
       - name: Install build tools
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential mingw-w64
+          sudo apt-get install -y build-essential mingw-w64 neofetch
+
+      # Step 3: Run neofetch
+      - name: Run neofetch
+        run: |
+          neofetch
 
       # Step 3: Compile the Linux binary
       - name: Build Linux binary
@@ -31,7 +36,7 @@ jobs:
           x86_64-w64-mingw32-g++ -o main.exe main.cpp
 
       # Step 5: Upload the compiled Linux binary
-      - name: Upload Linux binary to tag
+      - name: Upload Linux binary to release
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
@@ -40,7 +45,7 @@ jobs:
           asset_content_type: application/octet-stream
 
       # Step 6: Upload the compiled Windows binary
-      - name: Upload Windows binary to tag
+      - name: Upload Windows binary to release
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ github.event.release.upload_url }}
