--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -43,6 +43,8 @@ jobs:
           asset_path: ./main
           asset_name: main-linux
           asset_content_type: application/octet-stream
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # Step 6: Upload the compiled Windows binary
       - name: Upload Windows binary to release
@@ -52,3 +54,5 @@ jobs:
           asset_path: ./main.exe
           asset_name: main-windows.exe
           asset_content_type: application/octet-stream
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
