--- a/.github/workflows/issue-closer.yml
+++ b/.github/workflows/issue-closer.yml
@@ -21,15 +21,25 @@ jobs:
               const github = require("@actions/github");
             }
 
+            // Check if the issue exists in the payload
+            if (!github.context.payload.issue) {
+              core.setFailed("This workflow can only be triggered by issue events.");
+              return;
+            }
+
             const issueBody = github.context.payload.issue.body;
 
             // Define a condition to check if the issue follows the template
-            const templateKeywords = ["**Describe the bug**", "**Is your feature request related to a problem? Please describe.**", "**Describe the vulnerability**"];
+            const templateKeywords = [
+            "**Describe the bug**",
+            "**Is your feature request related to a problem? Please describe.**",
+             "**Describe the vulnerability**"
+            ];
             const isCompliant = templateKeywords.some(keyword => issueBody.includes(keyword));
 
             if (!isCompliant) {
-              // Close the issue and leave a comment
-              await github.rest.issues.update({
+            // Close the issue and leave a comment
+            await github.rest.issues.update({
               owner: github.context.repo.owner,
               repo: github.context.repo.repo,
               issue_number: github.context.payload.issue.number,
