--- a/.github/workflows/issue-closer.yml
+++ b/.github/workflows/issue-closer.yml
@@ -44,6 +44,6 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: issue.number,
-                body: "This issue does not follow the required template and has been automatically closed. Please ensure your issue follows the template and reopen it."
+                body: "This issue does not follow one of the required templates and has been automatically closed. Please ensure your issue follows a template and reopen it."
               });
             }
