--- a/.github/workflows/issue-closer.yml
+++ b/.github/workflows/issue-closer.yml
@@ -33,6 +33,7 @@ jobs:
             const isCompliant = templateKeywords.some(keyword => issueBody.includes(keyword));
 
             if (!isCompliant) {
+              // Close the issue if it's not compliant
               await github.rest.issues.update({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
@@ -44,6 +45,36 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 issue_number: issue.number,
-                body: "This issue does not follow one of the required templates and has been automatically closed. Please ensure your issue follows a template and reopen it."
+                body: "This issue does not follow the required template and has been automatically closed. Please ensure your issue follows the template and reopen it."
+              });
+            } else {
+              // If the issue is compliant, leave a message with contribution instructions
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: issue.number,
+                body: `
+            # Contributing to Multitool++
+            Thank you for your interest in contributing to Multitool++! Here is how to get started:
+
+            ## Forking the repository
+            You can visit [this link](https://github.com/benja2998/multitoolplusplus/fork) to fork the repository.
+
+            ## Making your first change
+            You may want to clone your fork locally:
+            \`\`\`bash
+            git clone https://github.com/<your_username>/multitoolplusplus # assuming you didn't change the name
+            \`\`\`
+            Alternatively, you can edit files directly from the web interface.
+
+            You can do things like: adding new functionality, fixing bugs, fixing vulnerabilities, etc. Please remember to also use meaningful commit messages.
+
+            ## Code Style
+            - Follow the code style in this repository.
+            - Use meaningful variable and function names.
+
+            ## Reporting Issues
+            If you find a bug or have a feature request, you can open an issue following one of the issue templates provided. Issues not following a template will be closed.
+                `
               });
             }
