--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -56,3 +56,54 @@ jobs:
           asset_content_type: application/octet-stream
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # Step 8: Submit Linux binary to VirusTotal
+      - name: Submit Linux binary to VirusTotal
+        id: vt_linux
+        run: |
+          response=$(curl --silent --request POST \
+            --url https://www.virustotal.com/api/v3/files \
+            --header "x-apikey: $VT_API_KEY" \
+            --form file=@main)
+
+          echo "$response" > vt_linux_response.json
+          LINK=$(echo "$response" | jq -r '.data.links.self')
+          echo "link=$LINK" >> $GITHUB_OUTPUT
+        env:
+          VT_API_KEY: ${{ secrets.VT_API_KEY }}
+
+      # Step 9: Submit Windows binary to VirusTotal
+      - name: Submit Windows binary to VirusTotal
+        id: vt_windows
+        run: |
+          response=$(curl --silent --request POST \
+            --url https://www.virustotal.com/api/v3/files \
+            --header "x-apikey: $VT_API_KEY" \
+            --form file=@main.exe)
+
+          echo "$response" > vt_windows_response.json
+          LINK=$(echo "$response" | jq -r '.data.links.self')
+          echo "link=$LINK" >> $GITHUB_OUTPUT
+        env:
+          VT_API_KEY: ${{ secrets.VT_API_KEY }}
+
+      # Step 10: Comment VirusTotal links on the release
+      - name: Comment VirusTotal scan links on the release
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const linuxVT = '${{ steps.vt_linux.outputs.link }}';
+            const windowsVT = '${{ steps.vt_windows.outputs.link }}';
+
+            const body = `
+            🔍 **VirusTotal Scan Links**
+            - [Linux binary scan](${linuxVT})
+            - [Windows binary scan](${windowsVT})
+            `;
+
+            await github.rest.repos.createReleaseComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              release_id: context.payload.release.id,
+              body: body
+            });
