--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -83,7 +83,7 @@ jobs:
           echo "link=$LINK" >> $GITHUB_OUTPUT
         env:
           VT_API_KEY: ${{ secrets.VT_API_KEY }}
-
+          
       # Step 10: Append VirusTotal links to the release body
       - name: Append VirusTotal links to the release body
         uses: actions/github-script@v6
@@ -95,12 +95,18 @@ jobs:
             const linuxVT = process.env.LINUX_VT;
             const windowsVT = process.env.WINDOWS_VT;
 
+            const releaseId = context.payload.release.id;
+            const owner = '${{ github.repository_owner }}';
+            const repo = '${{ github.repository }}';
+
+            // Get the release details
             const { data: release } = await github.rest.repos.getRelease({
-              owner: '${{ github.repository_owner }}',  # Use GitHub's context to get owner
-              repo: '${{ github.repository }}',  # Use GitHub's context to get repo
-              release_id: context.payload.release.id
+              owner: owner,
+              repo: repo,
+              release_id: releaseId
             });
 
+            // Update the release body with VirusTotal scan links
             const updatedBody = `${release.body || ""}
 
 ---
@@ -109,10 +115,12 @@ jobs:
 - [Linux binary scan](${linuxVT})
 - [Windows binary scan](${windowsVT})`;
 
+            // Update the release with new body content
             await github.rest.repos.updateRelease({
-              owner: '${{ github.repository_owner }}', 
-              repo: '${{ github.repository }}', 
-              release_id: context.payload.release.id,
+              owner: owner,
+              repo: repo,
+              release_id: releaseId,
               body: updatedBody
             });
+
 
