--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -64,7 +64,8 @@ jobs:
             --form file=@main)
 
           echo "$response" > vt_linux_response.json
-          LINK=$(echo "$response" | jq -r '.data.links.self')
+          ANALYSIS_ID=$(echo "$response" | jq -r '.data.id')
+          LINK="https://www.virustotal.com/file/${ANALYSIS_ID}/analysis/"
           echo "link=$LINK" >> $GITHUB_OUTPUT
         env:
           VT_API_KEY: ${{ secrets.VT_API_KEY }}
@@ -79,7 +80,8 @@ jobs:
             --form file=@main.exe)
 
           echo "$response" > vt_windows_response.json
-          LINK=$(echo "$response" | jq -r '.data.links.self')
+          ANALYSIS_ID=$(echo "$response" | jq -r '.data.id')
+          LINK="https://www.virustotal.com/file/${ANALYSIS_ID}/analysis/"
           echo "link=$LINK" >> $GITHUB_OUTPUT
         env:
           VT_API_KEY: ${{ secrets.VT_API_KEY }}
@@ -89,8 +91,8 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            const linuxVT = process.env.LINUX_VT;
-            const windowsVT = process.env.WINDOWS_VT;
+            const linuxVT = '${{ steps.vt_linux.outputs.link }}';
+            const windowsVT = '${{ steps.vt_windows.outputs.link }}';
 
             // Get the release details
             const { data: release } = await github.rest.repos.getRelease({
@@ -102,6 +104,7 @@ jobs:
             // Update the release body with VirusTotal scan links
             const updatedBody = `${release.body || ""}
 
+            Unsure about the legitimacy of the files? See the [workflow](https://github.com/benja2998/multitoolplusplus/blob/main/.github/workflows/build-and-upload.yml) to see they weren't tampered with!
 
             🛡 **VirusTotal Scan Results**
             - [Linux binary scan](${linuxVT})
