--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -60,13 +60,13 @@ jobs:
         run: |
           response=$(curl --silent --request POST \
             --url https://www.virustotal.com/api/v3/files \
-            --header "x-apikey: $VT_API_KEY" \
+            --header "x-apikey: ${{ secrets.VT_API_KEY }}" \
             --form file=@main)
 
           echo "$response" > vt_linux_response.json
           ANALYSIS_ID=$(echo "$response" | jq -r '.data.id')
           LINK="https://www.virustotal.com/file/${ANALYSIS_ID}/analysis/"
-          echo "link=$LINK" >> $GITHUB_OUTPUT
+          echo "linux_link=$LINK" >> $GITHUB_ENV
         env:
           VT_API_KEY: ${{ secrets.VT_API_KEY }}
 
@@ -76,13 +76,13 @@ jobs:
         run: |
           response=$(curl --silent --request POST \
             --url https://www.virustotal.com/api/v3/files \
-            --header "x-apikey: $VT_API_KEY" \
+            --header "x-apikey: ${{ secrets.VT_API_KEY }}" \
             --form file=@main.exe)
 
           echo "$response" > vt_windows_response.json
           ANALYSIS_ID=$(echo "$response" | jq -r '.data.id')
           LINK="https://www.virustotal.com/file/${ANALYSIS_ID}/analysis/"
-          echo "link=$LINK" >> $GITHUB_OUTPUT
+          echo "windows_link=$LINK" >> $GITHUB_ENV
         env:
           VT_API_KEY: ${{ secrets.VT_API_KEY }}
 
@@ -91,8 +91,8 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            const linuxVT = '${{ steps.vt_linux.outputs.link }}';
-            const windowsVT = '${{ steps.vt_windows.outputs.link }}';
+            const linuxVT = process.env.linux_link;
+            const windowsVT = process.env.windows_link;
 
             // Get the release details
             const { data: release } = await github.rest.repos.getRelease({
@@ -104,7 +104,6 @@ jobs:
             // Update the release body with VirusTotal scan links
             const updatedBody = `${release.body || ""}
 
-            Unsure about the legitimacy of the files? See the [workflow](https://github.com/benja2998/multitoolplusplus/blob/main/.github/workflows/build-and-upload.yml) to see they weren't tampered with!
 
             🛡 **VirusTotal Scan Results**
             - [Linux binary scan](${linuxVT})
