--- a/.github/workflows/issue-closer.yml
+++ b/.github/workflows/issue-closer.yml
@@ -1,116 +1,80 @@
-name: Build and Upload Binary
+name: Close Non-Compliant Issues
 
 on:
-  release:
+  issues:
     types:
-      - created
+      - opened
+      - reopened
 
 jobs:
-  build-and-upload:
+  close_non_compliant_issues:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      # Step 2: Install necessary compilers and tools
-      - name: Install build tools
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential mingw-w64 neofetch jq curl
-
-      # Step 3: Run neofetch
-      - name: Run neofetch
-        run: neofetch
-
-      # Step 4: Compile the Linux binary
-      - name: Build Linux binary
-        run: g++ -static -o main main.cpp
-
-      # Step 5: Compile the Windows binary
-      - name: Build Windows binary
-        run: x86_64-w64-mingw32-g++ -static -static-libgcc -static-libstdc++ -o main.exe main.cpp
-
-      # Step 6: Upload the compiled Linux binary
-      - name: Upload Linux binary to release
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./main
-          asset_name: main-linux
-          asset_content_type: application/octet-stream
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # Step 7: Upload the compiled Windows binary
-      - name: Upload Windows binary to release
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ./main.exe
-          asset_name: main-windows.exe
-          asset_content_type: application/octet-stream
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # Step 8: Submit Linux binary to VirusTotal
-      - name: Submit Linux binary to VirusTotal
-        id: vt_linux
-        run: |
-          response=$(curl --silent --request POST \
-            --url https://www.virustotal.com/api/v3/files \
-            --header "x-apikey: $VT_API_KEY" \
-            --form file=@main)
-
-          echo "$response" > vt_linux_response.json
-          LINK=$(echo "$response" | jq -r '.data.links.self')
-          echo "link=$LINK" >> $GITHUB_OUTPUT
-        env:
-          VT_API_KEY: ${{ secrets.VT_API_KEY }}
-
-      # Step 9: Submit Windows binary to VirusTotal
-      - name: Submit Windows binary to VirusTotal
-        id: vt_windows
-        run: |
-          response=$(curl --silent --request POST \
-            --url https://www.virustotal.com/api/v3/files \
-            --header "x-apikey: $VT_API_KEY" \
-            --form file=@main.exe)
-
-          echo "$response" > vt_windows_response.json
-          LINK=$(echo "$response" | jq -r '.data.links.self')
-          echo "link=$LINK" >> $GITHUB_OUTPUT
-        env:
-          VT_API_KEY: ${{ secrets.VT_API_KEY }}
-
-      # Step 10: Append VirusTotal links to the release body
-      - name: Append VirusTotal links to the release body
+      - name: Check if the issue follows the template
         uses: actions/github-script@v6
         with:
           script: |
-            const linuxVT = '${{ steps.vt_linux.outputs.link }}';
-            const windowsVT = '${{ steps.vt_windows.outputs.link }}';
+            const issue = context.payload.issue;
 
-            // Get the release details
-            const { data: release } = await github.rest.repos.getRelease({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              release_id: context.payload.release.id
-            });
+            if (!issue) {
+              core.setFailed("This workflow can only be triggered by issue events.");
+              return;
+            }
 
-            // Update the release body with VirusTotal scan links
-            const updatedBody = `${release.body || ""}
+            const issueBody = issue.body || "";
 
+            const templateKeywords = [
+              "**Describe the bug**",
+              "**Is your feature request related to a problem? Please describe.**",
+              "**Describe the vulnerability**"
+            ];
 
-            🛡 **VirusTotal Scan Results**
-            - [Linux binary scan](${linuxVT})
-            - [Windows binary scan](${windowsVT})`;
+            const isCompliant = templateKeywords.some(keyword => issueBody.includes(keyword));
 
-            // Update the release with new body content
-            await github.rest.repos.updateRelease({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              release_id: context.payload.release.id,
-              body: updatedBody
-            });
+            if (!isCompliant) {
+              // Close the issue if it's not compliant
+              await github.rest.issues.update({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: issue.number,
+                state: "closed",
+              });
+
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: issue.number,
+                body: "This issue does not follow the required template and has been automatically closed. Please ensure your issue follows the template and reopen it."
+              });
+            } else {
+              // If the issue is compliant, leave a message with contribution instructions
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: issue.number,
+                body: `
+            # Contributing to Multitool++
+            Thank you for your interest in contributing to Multitool++! Here is how to get started:
+
+            ## Forking the repository
+            You can visit [this link](https://github.com/benja2998/multitoolplusplus/fork) to fork the repository.
+
+            ## Making your first change
+            You may want to clone your fork locally:
+            \`\`\`bash
+            git clone https://github.com/<your_username>/multitoolplusplus # assuming you didn't change the name
+            \`\`\`
+            Alternatively, you can edit files directly from the web interface.
+
+            You can do things like: adding new functionality, fixing bugs, fixing vulnerabilities, etc. Please remember to also use meaningful commit messages.
+
+            ## Code Style
+            - Follow the code style in this repository.
+            - Use meaningful variable and function names.
+
+            ## Reporting Issues
+            If you find a bug or have a feature request, you can open an issue following one of the issue templates provided. Issues not following a template will be closed.
+                `
+              });
+            }
