--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -29,11 +29,11 @@ jobs:
 
       # Step 4: Compile the Linux binary
       - name: Build Linux binary
-        run: g++ -static -o main main.cpp
+        run: g++ -static -o ./main ./src/*.cpp
 
       # Step 5: Compile the Windows binary
       - name: Build Windows binary
-        run: x86_64-w64-mingw32-g++ -static -static-libgcc -static-libstdc++ -o main.exe main.cpp
+        run: x86_64-w64-mingw32-g++ -static -static-libgcc -static-libstdc++ -o ./main.exe ./src/*.cpp
 
       # Step 6: Upload the compiled Linux binary
       - name: Upload Linux binary to release
